--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,6 +1,12 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
-  font-family: 'Lato', sans-serif;
-  text-align: center;
+  font-family: 'Open Sans', sans-serif;
   font-size: 18px;
   background-size: cover;
   background-attachment: fixed;
@@ -11,14 +17,54 @@ body {
 }
 
 .wrapper {
-  max-width: 580px;
+  width: 92%;
   opacity: 0;
   -webkit-animation: fadein 4s 0.6s forwards;
   animation: fadein 4s 0.6s forwards;
   margin: 0 auto;
 
-  @media (min-width: 560px) {
-    margin-top: 3em;
+}
+
+.intro {
+  text-align: center;
+  color: rgba(255, 255, 255, 0.75);
+
+  h1 {
+    font-weight: 800;
+    letter-spacing: 1px;
+    font-size: 48px;
+    line-height: 56px;
+    max-width: 800px;
+    margin: 1em auto 2.2em;
+
+    @media (max-width: 800px) {
+      font-size: 38px;
+      line-height: 46px;
+    }
+
+    @media (max-width: 800px) {
+      font-size: 28px;
+      line-height: 36px;
+    }
+  }
+
+  .name {
+    display: inline-block;
+    padding: .75em 2em 0;
+    margin: 1em 0 0;
+    color: rgba(255, 255, 255, 0.8);
+    font-style: italic;
+    font-weight: 700;
+
+
+    .title {
+      font-style: normal;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      font-size: .6em;
+      margin: 10px;
+      color: rgba(0, 0, 0, 0.7);
+    }
   }
 }
 
@@ -30,50 +76,27 @@ a:visited {
 a:hover {
   text-decoration: underline; }
 
-h1 {
-  font-size: 32px;
-  margin-top: 3em;
-  color: #FFF;
-  text-shadow: #888 0px 2px 3px;
-  font-weight: 900; }
 
-h2 {
-  text-transform: lowercase;
-  font-size: 26px;
-  margin-bottom: .75em;
-  color: rgba(0, 0, 0, 0.65);
-}
 
-[class^="icon"] {
-  width: 64px;
-  opacity: .2;
-  margin-bottom: 3em; }
+.blocks {
+  margin: 0 auto;
 
-section {
-
-  &:last-child {
-    padding: 0 0 50px;
-  }
-
-  h3 {
-    margin-bottom: .35em;
+  li {
+    margin: auto;
     display: block;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-
-    span {
-      color: #715E52;
-      font-weight: 300;
-      padding: 0 0 0 0.5em;
-    }
+    padding: 1.2em 1.5em;
+    @media (max-width: 440px) { padding: .8em 1em; }
+    margin-bottom: 40px;
+    background: rgba(255, 255, 255, 0.35);
+    max-width: 560px;
+    border-radius: 2px;
+    box-shadow: 6px 6px 0 0 rgba(0, 0, 0, 0.35);
   }
 
   p,
-  ul,
-  .year {
+  ul {
     margin: 0 auto;
-    line-height: 1.4em;
+    line-height: 1.6em;
     color: #404040;
     text-align: left;
     font-weight: 300; }
@@ -85,106 +108,116 @@ section {
       color: #0a0a0a;
     }
   }
-
-  .year {
-    font-size: 13px;
-    color: #715E52;
-    margin-bottom: .35em;
+  strong {
+    font-weight: 700;
+    color: #424254;
   }
 }
 
 
-.blocks blockquote {
-  font-size: .8em;
-  margin: 2em 0;
-  padding: .2em 0 .2em 1.5em;
-  border-left: 2px dashed #C56D2A;
-}
+blockquote {
+  font-size: .85em;
 
-.blocks blockquote:last-child {
-  margin-bottom: 0;
-}
-
-@media (min-width: 560px) {
-  blockquote p {
-    text-align: justify;
+  &:last-child {
+    margin-bottom: 0;
   }
-}
-blockquote p a {
-  text-decoration: underline;
-}
-blockquote footer {
-  margin-top: 1em;
-}
 
-blockquote img {
-  border-radius: 100%;
-  float: left;
-  margin-right: 1em;
-}
-.blocks blockquote img {
-  width: 48px;
-}
-
-blockquote a {
-  color: #404040;
-}
-blockquote a:hover {
-  text-decoration: none;
-}
-blockquote a span {
-  display: block;
-  line-height: 1.4em;
-}
-blockquote .name {
-  color: #404040;
-  padding-top: 5px;
-}
-blockquote .title {
-  font-weight: 300;
-  color: #715E52;
-}
-
-
-.blocks li {
-  padding: 1.5em 2em;
-  margin-bottom: 2.5em;
-  background: rgba(255, 244, 234, 0.7);
-
-  &:first-child {
-    margin-top: 0;
-  }
-}
-
-
-.footprint ul {
-  text-align: center;
-
-  li {
-    display: inline-block;
+  p {
 
     a {
-      color: #222;
-      display: inline-block;
-      font-size: 12px;
-      padding: .2em .5em;
-      margin: 0 .2em;
-      border-radius: 3px;
-      border: 1px solid rgba(0, 0, 0, 0.7);
-      transition: border-color .25s linear, background .25s linear;
-      -webkit-transition: border-color .25s linear, background .25s linear;
+      text-decoration: underline;
+      color: #404040;
 
-      @media (min-width: 440px) {
+      a:hover {
+        text-decoration: none;
+      }
+
+      span {
+        display: block;
+        line-height: 1.4em;
+      }
+    }
+
+    @media (min-width: 560px) {
+      text-align: justify;
+    }
+  }
+
+  img {
+    opacity: 0.8;
+    border-radius: 100%;
+    float: left;
+    margin-right: 1em;
+    width: 48px;
+  }
+
+  .name {
+    font-weight: 700;
+    font-style: italic;
+    color: #351330;
+    padding-top: 5px;
+  }
+
+  .title {
+    font-weight: 300;
+    color: #715E52;
+  }
+
+  footer {
+    font-weight: 700;
+    margin-top: 1em;
+    a {
+      display: block;
+      &:hover {
+        text-decoration: none;
+      }
+      span {
+        display: block;
+      }
+    }
+  }
+}
+
+
+.footprint {
+  margin: 2em 0 3em;
+
+  ul {
+    text-align: center;
+
+    li {
+      display: inline-block;
+
+      @media (max-width: 450px) {
+        &.hide-mobile { display: none; }
+      }
+
+      a {
+        color: #351330;
         display: inline-block;
-        font-size: 14px;
-        padding: 0.4em 1em;
-        margin: 0 0.5em;
+        font-size: 15px;
+        padding: .4em .6em;
+        margin: 0 .2em;
+        border-radius: 3px;
+        border: 1px solid rgba(53, 19, 48, .7);
+        transition: border-color .25s linear, background .25s linear;
+        -webkit-transition: border-color .25s linear, background .25s linear;
+
 
         &:hover {
           text-decoration: none;
           border-color: none;
-          background: rgba(255, 244, 234, 0.7);
+          background: rgba(53, 19, 48, .7);
+          color: #fff;
         }
+
+        @media (max-width: 500px) {
+          border: none;
+          background: rgba(53, 19, 48, .7);
+          color: #fff;
+        }
+
+
       }
     }
   }
