--- a/all.css
+++ b/all.css
@@ -213,6 +213,8 @@ html {
   box-sizing: inherit; }
 
 body {
+  padding: 0;
+  margin: 0;
   font-family: 'Open Sans', sans-serif;
   font-size: 18px;
   background-size: cover;
@@ -222,7 +224,6 @@ body {
       font-size: 18px; } }
 
 .wrapper {
-  width: 92%;
   opacity: 0;
   -webkit-animation: fadein 4s 0.6s forwards;
   animation: fadein 4s 0.6s forwards;
@@ -237,7 +238,8 @@ body {
     font-size: 48px;
     line-height: 56px;
     max-width: 800px;
-    margin: 1em auto 2.2em; }
+    margin: 1em auto 1em;
+    padding-bottom: 1.2em; }
     @media (max-width: 800px) {
       .intro h1 {
         font-size: 38px;
@@ -247,19 +249,28 @@ body {
         font-size: 28px;
         line-height: 36px; } }
   .intro .name {
-    display: inline-block;
-    padding: .75em 2em 0;
-    margin: 1em 0 0;
+    display: block;
+    padding: .75em 0;
+    margin: 0;
     color: rgba(255, 255, 255, 0.8);
     font-style: italic;
     font-weight: 700; }
+    @media (max-width: 600px) {
+      .intro .name {
+        background: rgba(0, 0, 0, 0.3);
+        padding: .3em 0;
+        position: relative;
+        top: -25px; } }
     .intro .name .title {
       font-style: normal;
       letter-spacing: 1px;
       text-transform: uppercase;
       font-size: .6em;
       margin: 10px;
-      color: rgba(0, 0, 0, 0.7); }
+      color: rgba(0, 0, 0, 0.8); }
+      @media (max-width: 600px) {
+        .intro .name .title {
+          color: rgba(255, 255, 255, 0.5); } }
 
 a,
 a:visited {
@@ -270,6 +281,7 @@ a:hover {
   text-decoration: underline; }
 
 .blocks {
+  width: 92%;
   margin: 0 auto; }
   .blocks li {
     margin: auto;
