--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -6,6 +6,8 @@ html {
 }
 
 body {
+  padding: 0;
+  margin: 0;
   font-family: 'Open Sans', sans-serif;
   font-size: 18px;
   background-size: cover;
@@ -17,7 +19,6 @@ body {
 }
 
 .wrapper {
-  width: 92%;
   opacity: 0;
   -webkit-animation: fadein 4s 0.6s forwards;
   animation: fadein 4s 0.6s forwards;
@@ -35,7 +36,8 @@ body {
     font-size: 48px;
     line-height: 56px;
     max-width: 800px;
-    margin: 1em auto 2.2em;
+    margin: 1em auto 1em;
+    padding-bottom: 1.2em;
 
     @media (max-width: 800px) {
       font-size: 38px;
@@ -49,9 +51,15 @@ body {
   }
 
   .name {
-    display: inline-block;
-    padding: .75em 2em 0;
-    margin: 1em 0 0;
+    @media (max-width: 600px) {
+      background: rgba(0, 0, 0, 0.3);
+      padding: .3em 0;
+      position: relative;
+      top: -25px;
+    }
+    display: block;
+    padding: .75em 0;
+    margin:0;
     color: rgba(255, 255, 255, 0.8);
     font-style: italic;
     font-weight: 700;
@@ -63,7 +71,10 @@ body {
       text-transform: uppercase;
       font-size: .6em;
       margin: 10px;
-      color: rgba(0, 0, 0, 0.7);
+      color: rgba(0, 0, 0, 0.8);
+      @media (max-width: 600px) {
+        color: rgba(255, 255, 255, 0.5);
+      }
     }
   }
 }
@@ -79,6 +90,7 @@ a:hover {
 
 
 .blocks {
+  width: 92%;
   margin: 0 auto;
 
   li {
