--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -38,6 +38,7 @@ body {
     max-width: 800px;
     margin: 1em auto 1em;
     padding-bottom: 1.2em;
+    text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.3);
 
     @media (max-width: 800px) {
       font-size: 38px;
@@ -59,19 +60,21 @@ body {
     }
     display: block;
     padding: .75em 0;
-    margin:0;
-    color: rgba(255, 255, 255, 0.8);
+    margin: 0;
+    color: rgba(255, 255, 255, 0.75);
     font-style: italic;
     font-weight: 700;
+    font-size: 20px;
 
 
     .title {
       font-style: normal;
       letter-spacing: 1px;
       text-transform: uppercase;
-      font-size: .6em;
+      font-size: 11px;
+      text-shadow: 0 1px 0 rgba(255, 255, 255, 0.08);
       margin: 10px;
-      color: rgba(0, 0, 0, 0.8);
+      color: rgba(0, 0, 0, 0.7);
       @media (max-width: 600px) {
         color: rgba(255, 255, 255, 0.5);
       }
@@ -96,13 +99,15 @@ a:hover {
   li {
     margin: auto;
     display: block;
-    padding: 1.2em 1.5em;
-    @media (max-width: 440px) { padding: .8em 1em; }
+    padding: .8em 1em;
     margin-bottom: 40px;
-    background: rgba(255, 255, 255, 0.35);
+    background: rgba(255, 255, 255, 0.65);
     max-width: 560px;
     border-radius: 2px;
-    box-shadow: 6px 6px 0 0 rgba(0, 0, 0, 0.35);
+    @media (min-width: 440px) {
+      padding: 1.2em 1.5em;
+      box-shadow: 6px 6px 0 0 rgba(0, 0, 0, 0.35);
+    }
   }
 
   p,
@@ -156,7 +161,7 @@ blockquote {
   }
 
   img {
-    opacity: 0.8;
+    opacity: .9;
     border-radius: 100%;
     float: left;
     margin-right: 1em;
@@ -172,7 +177,7 @@ blockquote {
 
   .title {
     font-weight: 300;
-    color: #715E52;
+    color: darken(#715E52, 10%);
   }
 
   footer {
@@ -192,7 +197,7 @@ blockquote {
 
 
 .footprint {
-  margin: 2em 0 3em;
+  margin: 4em 0 3em;
 
   ul {
     text-align: center;
@@ -205,30 +210,21 @@ blockquote {
       }
 
       a {
-        color: #351330;
+        color: rgba(255, 255, 255, 1);
         display: inline-block;
-        font-size: 15px;
-        padding: .4em .6em;
-        margin: 0 .2em;
+
+        padding: .6em 1em;
+        margin: 0 .4em;
         border-radius: 3px;
-        border: 1px solid rgba(53, 19, 48, .7);
+        border: 1px solid rgba(255, 255, 255, 0.9);
         transition: border-color .25s linear, background .25s linear;
         -webkit-transition: border-color .25s linear, background .25s linear;
 
 
         &:hover {
           text-decoration: none;
-          border-color: none;
-          background: rgba(53, 19, 48, .7);
-          color: #fff;
+          background: rgba(0, 0, 0, .1);
         }
-
-        @media (max-width: 500px) {
-          border: none;
-          background: rgba(53, 19, 48, .7);
-          color: #fff;
-        }
-
 
       }
     }
