--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -23,12 +23,11 @@ body {
   -webkit-animation: fadein 4s 0.6s forwards;
   animation: fadein 4s 0.6s forwards;
   margin: 0 auto;
-
 }
 
 .intro {
   text-align: center;
-  color: rgba(255, 255, 255, 0.75);
+  color: rgba(255, 255, 255, 0.9);
 
   h1 {
     font-weight: 800;
@@ -36,9 +35,13 @@ body {
     font-size: 48px;
     line-height: 56px;
     max-width: 800px;
-    margin: 1em auto 1em;
-    padding-bottom: 1.2em;
+    margin: 2em auto 0;
+    padding-bottom: 0;
     text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.3);
+
+    .no-shadow {
+      text-shadow: none;
+    }
 
     @media (max-width: 800px) {
       font-size: 38px;
@@ -48,36 +51,6 @@ body {
     @media (max-width: 800px) {
       font-size: 28px;
       line-height: 36px;
-    }
-  }
-
-  .name {
-    @media (max-width: 600px) {
-      background: rgba(0, 0, 0, 0.3);
-      padding: .3em 0;
-      position: relative;
-      top: -25px;
-    }
-    display: block;
-    padding: .75em 0;
-    margin: 0;
-    color: rgba(255, 255, 255, 0.75);
-    font-style: italic;
-    font-weight: 700;
-    font-size: 20px;
-
-
-    .title {
-      font-style: normal;
-      letter-spacing: 1px;
-      text-transform: uppercase;
-      font-size: 11px;
-      text-shadow: 0 1px 0 rgba(255, 255, 255, 0.08);
-      margin: 10px;
-      color: rgba(0, 0, 0, 0.7);
-      @media (max-width: 600px) {
-        color: rgba(255, 255, 255, 0.5);
-      }
     }
   }
 }
@@ -94,14 +67,14 @@ a:hover {
 
 .blocks {
   width: 92%;
-  margin: 0 auto;
+  margin: 6em auto 3em;
 
   li {
     margin: auto;
     display: block;
     padding: .8em 1em;
     margin-bottom: 40px;
-    background: rgba(255, 255, 255, 0.65);
+    background: rgba(255, 255, 255, 0.85);
     max-width: 560px;
     border-radius: 2px;
     @media (min-width: 440px) {
@@ -126,6 +99,7 @@ a:hover {
     }
   }
   strong {
+    font-style: italic;
     font-weight: 700;
     color: #424254;
   }
@@ -134,6 +108,14 @@ a:hover {
 
 blockquote {
   font-size: .85em;
+
+  small {
+    display: block;
+    padding-top: 10px;
+    text-transform: uppercase;
+    font-size: 11px;
+    text-align: right;
+  }
 
   &:last-child {
     margin-bottom: 0;
@@ -170,19 +152,25 @@ blockquote {
 
   .name {
     font-weight: 700;
-    font-style: italic;
-    color: #351330;
-    padding-top: 5px;
+    font-size: 13px;
+    color: #424254;
+    padding-top: 8px;
+
+    &:hover {
+      color: darken(#424254, 10%);
+      text-decoration: underline;
+    }
   }
 
   .title {
     font-weight: 300;
-    color: darken(#715E52, 10%);
+    font-size: 13px;
+    color: rgba(66, 66, 84, .8);
   }
 
   footer {
     font-weight: 700;
-    margin-top: 1em;
+    margin-top: 1.7em;
     a {
       display: block;
       &:hover {
@@ -195,40 +183,28 @@ blockquote {
   }
 }
 
+.button {
+  display: block;
+  max-width: 320px;
+  border: 1px solid #fff;
+  color: #fff;
+  padding: 1.3em 2em;
+  border-radius: 3px;
+  margin: 0 auto 2em;
+  text-align: center;
 
-.footprint {
-  margin: 4em 0 3em;
+  font-size: 12px;
+  letter-spacing: 1px;
 
-  ul {
-    text-align: center;
-
-    li {
-      display: inline-block;
-
-      @media (max-width: 450px) {
-        &.hide-mobile { display: none; }
-      }
-
-      a {
-        color: rgba(255, 255, 255, 1);
-        display: inline-block;
-
-        padding: .6em 1em;
-        margin: 0 .4em;
-        border-radius: 3px;
-        border: 1px solid rgba(255, 255, 255, 0.9);
-        transition: border-color .25s linear, background .25s linear;
-        -webkit-transition: border-color .25s linear, background .25s linear;
-
-
-        &:hover {
-          text-decoration: none;
-          background: rgba(0, 0, 0, .1);
-        }
-
-      }
-    }
+  &:hover {
+    text-decoration: none;
+    background: rgba(53, 19, 48, .15);
   }
+}
+
+
+.hide {
+  display: none !important;
 }
 
 @-webkit-keyframes fadein {
