fun facts added

--- a/all.css
+++ b/all.css
@@ -278,7 +278,7 @@ a:hover {
   .blocks p,
   .blocks ul {
     margin: 0 auto;
-    line-height: 1.6em;
+    line-height: 1.8em;
     color: #404040;
     text-align: left;
     font-weight: 300; }
@@ -358,6 +358,11 @@ blockquote {
 
 .hide {
   display: none !important; }
+
+.dotted {
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.6); }
+  .dotted:hover {
+    cursor: help; }
 
 @-webkit-keyframes fadein {
   from {
