--- a/all.css
+++ b/all.css
@@ -262,7 +262,7 @@ a:hover {
 
 .blocks {
   width: 92%;
-  margin: 6em auto 3em; }
+  margin: 4em auto 3em; }
   .blocks li {
     margin: auto;
     display: block;
@@ -350,11 +350,13 @@ blockquote {
   border-radius: 3px;
   margin: 0 auto 2em;
   text-align: center;
+  text-transform: uppercase;
   font-size: 12px;
-  letter-spacing: 1px; }
+  letter-spacing: .8px; }
   .button:hover {
     text-decoration: none;
-    background: rgba(53, 19, 48, 0.15); }
+    background: rgba(53, 19, 48, 0.15);
+    box-shadow: 6px 6px 0 0 rgba(0, 0, 0, 0.35); }
 
 .hide {
   display: none !important; }
@@ -363,6 +365,14 @@ blockquote {
   border-bottom: 1px dotted rgba(0, 0, 0, 0.6); }
   .dotted:hover {
     cursor: help; }
+
+img.profile {
+  display: block;
+  width: 198px;
+  height: 198px;
+  border-radius: 50%;
+  margin: 1em auto 3em;
+  box-shadow: 6px 6px 0 0 rgba(0, 0, 0, 0.35); }
 
 @-webkit-keyframes fadein {
   from {
