--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -67,7 +67,7 @@ a:hover {
 
 .blocks {
   width: 92%;
-  margin: 6em auto 3em;
+  margin: 4em auto 3em;
 
   li {
     margin: auto;
@@ -192,13 +192,15 @@ blockquote {
   border-radius: 3px;
   margin: 0 auto 2em;
   text-align: center;
+  text-transform: uppercase;
 
   font-size: 12px;
-  letter-spacing: 1px;
+  letter-spacing: .8px;
 
   &:hover {
     text-decoration: none;
     background: rgba(53, 19, 48, .15);
+    box-shadow: 6px 6px 0 0 rgba(0, 0, 0, 0.35);
   }
 }
 
@@ -213,6 +215,15 @@ blockquote {
   &:hover {
     cursor: help;
   }
+}
+
+img.profile {
+  display: block;
+  width: 198px;
+  height: 198px;
+  border-radius: 50%;
+  margin: 1em auto 3em;
+  box-shadow: 6px 6px 0 0 rgba(0, 0, 0, 0.35);
 }
 
 @-webkit-keyframes fadein {
