--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -22,7 +22,7 @@ body {
   opacity: 0;
   -webkit-animation: fadein 4s 0.6s forwards;
   animation: fadein 4s 0.6s forwards;
-  margin: 0 auto;
+  margin: 0 auto 3em;
 }
 
 .intro {
@@ -74,7 +74,7 @@ a:hover {
     display: block;
     padding: .8em 1em;
     margin-bottom: 40px;
-    background: rgba(255, 255, 255, 0.85);
+    background: rgba(255, 255, 255, 1);
     max-width: 560px;
     border-radius: 2px;
     @media (min-width: 440px) {
